; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-sa1100/extr_jornada720.c_jornada720_set_vpp.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-sa1100/extr_jornada720.c_jornada720_set_vpp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PPC_LDD7 = common dso_local global i32 0, align 4
@PPSR = common dso_local global i32 0, align 4
@PPDR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @jornada720_set_vpp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @jornada720_set_vpp(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load i32, i32* @PPC_LDD7, align 4
  %7 = load i32, i32* @PPSR, align 4
  %8 = or i32 %7, %6
  store i32 %8, i32* @PPSR, align 4
  br label %14

9:                                                ; preds = %1
  %10 = load i32, i32* @PPC_LDD7, align 4
  %11 = xor i32 %10, -1
  %12 = load i32, i32* @PPSR, align 4
  %13 = and i32 %12, %11
  store i32 %13, i32* @PPSR, align 4
  br label %14

14:                                               ; preds = %9, %5
  %15 = load i32, i32* @PPC_LDD7, align 4
  %16 = load i32, i32* @PPDR, align 4
  %17 = or i32 %16, %15
  store i32 %17, i32* @PPDR, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
